...
<!--            android:text="00 : 00 : 00"-->
<!--            android:textAppearance="@style/TextAppearance.AppCompat.Display3"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="332dp"
            android:layout_height="106dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="128dp"
            android:format="00:00:00"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textSize="70sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/start"
            android:layout_width="239dp"
            android:layout_height="56dp"
            android:layout_marginStart="84dp"
            android:layout_marginLeft="84dp"
            android:layout_marginTop="328dp"
            android:text="START"
...
